Pretty print JSON and handle client certs
