# docs/swagger.json
@@ -669,6 +669,12 @@
                         "description": "Column direction to sort by (default asc)",
                         "name": "sort_dir",
                         "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Limit to the last n requests (sorted by time)",
+                        "name": "last",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -1263,6 +1269,53 @@
                 }
             }
         },
+        "/script_groups/{guid}/expanded": {
+            "patch": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "updates whether a script group is expanded (used for the UI)",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Scripting"
+                ],
+                "summary": "Set Script Group Expanded Status",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "script group guid",
+                        "name": "guid",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "boolean",
+                        "description": "expanded state",
+                        "name": "expanded",
+                        "in": "formData",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/script_groups/{guid}/title": {
             "patch": {
                 "security": [
@@ -1801,6 +1854,9 @@
                 "requestSize": {
                     "type": "integer"
                 },
+                "responseContentLength": {
+                    "type": "integer"
+                },
                 "responseContentType": {
                     "type": "string"
                 },
@@ -1918,6 +1974,9 @@
         "project.ScriptGroup": {
             "type": "object",
             "properties": {
+                "expanded": {
+                    "type": "boolean"
+                },
                 "guid": {
                     "type": "string"
                 },
@@ -2054,6 +2113,12 @@
         "proxy.MakeRequestParameters": {
             "type": "object",
             "properties": {
+                "client_cert": {
+                    "type": "string"
+                },
+                "client_cert_key": {
+                    "type": "string"
+                },
                 "host": {
                     "type": "string"
                 },
